--- a/diamond_prediction.ipynb
+++ b/diamond_prediction.ipynb
@@ -2286,7 +2286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.4 64-bit ('anaconda3')",
    "language": "python",
    "name": "python3"
   },
@@ -2301,6 +2301,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "263930470851f494f0ed2879c35b57985588df20f9e529b86e97dd5eb9ddc466"
+   }
   }
  },
  "nbformat": 4,
