--- a/notebook/diamond_prediction.ipynb
+++ b/notebook/diamond_prediction.ipynb
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "39b5e257",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,7 @@
        "0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "f3a2842f",
    "metadata": {},
    "outputs": [],
@@ -1828,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "f640c799",
    "metadata": {},
    "outputs": [
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "4bf4abb0",
    "metadata": {},
    "outputs": [],
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "1ce9d615",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1890,7 @@
        "         0.49762828,  0.61794536]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "f3fad360",
    "metadata": {},
    "outputs": [
@@ -1923,7 +1923,7 @@
        "        -1.12499755, -1.04625874]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "06155ecf",
    "metadata": {},
    "outputs": [],
@@ -1957,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "a04a8833",
    "metadata": {},
    "outputs": [
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "7cb4b1de",
    "metadata": {},
    "outputs": [
@@ -2236,7 +2236,7 @@
        "0        Linear Regression  0.886989"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "5aa87ab3",
    "metadata": {},
    "outputs": [
@@ -2277,8 +2277,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "bd9eb14a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3df0ca9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(CatBoostRegressor(verbose=False),open('model.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "bd3b0bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(catboost_model,open('model2.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a221b056",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2286,7 +2316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.4 64-bit ('anaconda3')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
